Updated header styling

--- a/estore-ui/src/app/nav/top-nav/top-nav.component.html
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header" color="primary">
     <div class="left-section">
-        <button mat-icon-button (click)="onToggleSidenav()" class="mobile-menu">
+        <button mat-icon-button class="mobile-hamburger-menu" (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
         </button>
         <a [routerLink]="['/']">
