--- a/estore-ui/src/app/nav/top-nav/top-nav.component.scss
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.scss
@@ -8,11 +8,14 @@
     display: flex;
     justify-content: center; /* center horizontally */
     align-items: center; /* center vertically */
-    height: 100px; /* set height of container */
 }
   
 .middle-section {
-    flex: 1 1 auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
 }
   
 @media only screen and (max-width: 959px) {
