Reworked header styles

--- a/estore-ui/src/app/nav/top-nav/top-nav.component.html
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.html
@@ -8,7 +8,7 @@
         </a>
     </div>
     <div class="middle-section">
-        <app-product-search class="search" />
+        <app-product-search class="search-bar" />
       </div>
     <div class="right-section">
         <div>
@@ -19,13 +19,3 @@
         </div>
     </div>
 </mat-toolbar>
-
-<!-- <div class="search-bar-container">
-    <mat-form-field appearance="fill">
-        <mat-label>Search</mat-label>
-        <input matInput type="text" placeholder="Search" class="search-bar">
-        <button mat-button matSuffix>
-            <mat-icon>search</mat-icon>
-    </button>
-    </mat-form-field>
-</div> -->
