--- a/estore-ui/src/app/nav/top-nav/top-nav.component.scss
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.scss
@@ -2,13 +2,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 80px;
+    min-height: 60px;
 }
   
 .left-section {
     display: flex;
     justify-content: center; //center horizontally
     align-items: center; // center vertically
+}
+
+.left-section button {
+    margin: 0 10px;
 }
   
 .middle-section {
@@ -24,11 +28,15 @@
     justify-content: center;
     width: 100%;
     max-width: 600px;
-    height: 40px;
+    height: 36px;
+}
+
+.right-section button {
+    margin: 0 10px;
 }
   
 @media only screen and (max-width: 959px) {
-    .right-section div {
+    .right-section {
         display: none;
     }
 }
@@ -38,15 +46,14 @@
         display: none;
     }
 }
-  
-.logo {
-    width: 80px;
-    height: 80px;
-    margin: 0;
-    padding: 0;
-    background-image: url(../../../assets/images/logo.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
 
+// .logo {
+//     width: 80px;
+//     height: 80px;
+//     margin: 0;
+//     padding: 0;
+//     background-image: url(../../../assets/images/logo.png);
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     background-position: center;
+// }
