--- a/estore-ui/src/app/feature/login-registration/login-registration.component.html
+++ b/estore-ui/src/app/feature/login-registration/login-registration.component.html
@@ -22,7 +22,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Username</mat-label>
             <input matInput formControlName="username" type="text" required />
-            <mat-error *ngIf="loginForm.controls['username'].hasError('usernameTaken')">Username taken</mat-error>
+            <mat-error *ngIf="registerForm.controls['username'].hasError('usernameTaken')">Username already taken</mat-error>
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
