Finished create product component

--- a/estore-ui/src/app/feature/create-product/create-product.component.html
+++ b/estore-ui/src/app/feature/create-product/create-product.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <h1>Add a New Product</h1>
-    <form [formGroup]="editProductForm" (ngSubmit)="onSubmitEditProductForm()">
+    <form [formGroup]="createProductForm" (ngSubmit)="create()">
       <div class="form-group">
         <mat-form-field appearance="outline">
             <mat-label>Product Name</mat-label>
             <input matInput formControlName="name" type="text" placeholder="Something magical..." required />
             <mat-icon matPrefix>edit</mat-icon>
             <!-- <mat-hint>The name of the product</mat-hint> -->
-            <mat-error *ngIf="editProductForm.controls['name'].hasError('required')">Name is required</mat-error>
+            <mat-error *ngIf="createProductForm.controls['name'].hasError('required')">Name is required</mat-error>
           </mat-form-field>
       
           <mat-form-field appearance="outline">
@@ -15,8 +15,8 @@
             <input matInput formControlName="price" type="number" placeholder="0.00" required>
             <mat-icon matPrefix>attach_money</mat-icon>
             <mat-hint>The price of this product in USD</mat-hint>
-            <mat-error *ngIf="editProductForm.controls['price'].hasError('required')">Price is required</mat-error>
-            <mat-error *ngIf="editProductForm.controls['price'].hasError('pattern')">Price must be a decimal number with 2 decimal places</mat-error>
+            <mat-error *ngIf="createProductForm.controls['price'].hasError('required')">Price is required</mat-error>
+            <mat-error *ngIf="createProductForm.controls['price'].hasError('pattern')">Price must be a decimal number with 2 decimal places</mat-error>
           </mat-form-field>
       
           <mat-form-field appearance="outline">
@@ -24,8 +24,8 @@
             <input matInput formControlName="stockQuantity" type="number" placeholder="0" required />
             <mat-icon matPrefix>inventory</mat-icon>
             <mat-hint>Amount of this product you have in stock</mat-hint>
-            <mat-error *ngIf="editProductForm.controls['stockQuantity'].hasError('required')">Stock Quantity is required</mat-error>
-            <mat-error *ngIf="editProductForm.controls['stockQuantity'].hasError('pattern')">Stock Quantity must be a number</mat-error>
+            <mat-error *ngIf="createProductForm.controls['stockQuantity'].hasError('required')">Stock Quantity is required</mat-error>
+            <mat-error *ngIf="createProductForm.controls['stockQuantity'].hasError('pattern')">Stock Quantity must be a number</mat-error>
           </mat-form-field>
       
           <mat-form-field appearance="outline">
@@ -33,15 +33,23 @@
             <input matInput formControlName="images" type="text" />
             <mat-icon matPrefix>image</mat-icon>
             <mat-hint>Comma-separated image URLs</mat-hint>
-            <mat-error *ngIf="editProductForm.controls['images'].hasError('pattern')">Images must be a comma-separated list of URLs</mat-error>
+            <mat-error *ngIf="createProductForm.controls['images'].hasError('pattern')">Images must be a comma-separated list of URLs</mat-error>
           </mat-form-field>
       
           <mat-form-field appearance="outline">
-            <mat-label>Description</mat-label>
-            <textarea matInput formControlName="description"></textarea>
+            <mat-label>Summary</mat-label>
+            <textarea matInput formControlName="summary"></textarea>
             <mat-icon matPrefix>edit_note</mat-icon>
-            <mat-hint>The paragraph description of this product</mat-hint>
-            <mat-error *ngIf="editProductForm.controls['description'].hasError('required')">Description is required</mat-error>
+            <mat-hint>A paragraph summary of this product</mat-hint>
+            <mat-error *ngIf="createProductForm.controls['summary'].hasError('required')">Summary is required</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Tags</mat-label>
+            <input matInput formControlName="tags" type="text" />
+            <mat-icon matPrefix>label</mat-icon>
+            <mat-hint>Comma-separated tags</mat-hint>
+            <mat-error *ngIf="createProductForm.controls['tags'].hasError('pattern')">Tags must be a comma-separated list of words</mat-error>
           </mat-form-field>
       
           <button
@@ -49,9 +57,9 @@
             class="submit-btn"
             color="primary"
             type="submit"
-            [disabled]="!editProductForm.valid || isLoading || isSuccess"
+            [disabled]="!createProductForm.valid || isLoading || isSuccess"
             [ngClass]="{'disabled': isLoading}"
-            (click)="onSubmitEditProductForm()"
+            (click)="create()"
           >
             <mat-spinner *ngIf="isLoading" diameter="24"></mat-spinner>
             <mat-icon *ngIf="isSuccess && !isLoading">checkmark</mat-icon>
