--- a/estore-ui/src/app/feature/edit-product/edit-product.component.html
+++ b/estore-ui/src/app/feature/edit-product/edit-product.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Edit Existing Product</h1>
+  <h1 class="text-center">Edit Existing Product</h1>
   <form [formGroup]="editProductForm" (ngSubmit)="onSubmitEditProductForm()">
     <div class="form-group">
       <mat-form-field appearance="outline">
