Fixed error with save button in edit product form

--- a/estore-ui/src/app/feature/edit-product/edit-product.component.html
+++ b/estore-ui/src/app/feature/edit-product/edit-product.component.html
@@ -63,7 +63,7 @@
         >
           <mat-spinner *ngIf="isLoading" diameter="24"></mat-spinner>
           <mat-icon *ngIf="isSuccess && !isLoading">checkmark</mat-icon>
-          <span #editButtonText>Save</span>
+          <span #saveButtonText>Save</span>
         </button>
 
 
