Implemented the catalog component to display the list of products.

--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
@@ -1,11 +1,11 @@
 <mat-card class="card">
   <mat-card-header>
     <!-- <mat-card-title>{{ name }}</mat-card-title> -->
-    <mat-card-title>Wand</mat-card-title>
-    <mat-card-subtitle>Price</mat-card-subtitle>
+    <mat-card-title>{{name}}</mat-card-title>
+    <mat-card-subtitle>{{price}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image />
-  <mat-card-content> This is one of the oldest wands. </mat-card-content>
+  <mat-card-content>{{description}}</mat-card-content>
   <mat-card-actions align="end">
     <button mat-button style="background-color: #673ab7; color: white">
       Add To Cart
