--- a/estore-ui/src/app/nav/top-nav/top-nav.component.scss
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.scss
@@ -4,6 +4,13 @@
     align-items: center;
     min-height: 60px;
 }
+
+.logo-emoji {
+    font-size: 35px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
   
 .left-section {
     display: flex;
@@ -29,6 +36,12 @@
     width: 100%;
     max-width: 600px;
     height: 36px;
+}
+
+.right-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .right-section button {
