--- a/estore-ui/src/app/feature/cart/cart.component.html
+++ b/estore-ui/src/app/feature/cart/cart.component.html
@@ -1,1 +1,16 @@
-<p>cart works!</p>
+<div class="container">
+    <h1 class="text-center">Shopping Cart</h1>
+    <ng-container *ngIf="cartEntries.length > 0; else emptyCart">
+      <app-cart-product-card *ngFor="let entry of cartEntries"
+        [sku]="entry.sku"
+        [quantity]="entry.quantity"
+        [userId]="userId">
+      </app-cart-product-card>
+    </ng-container>
+    <ng-template #emptyCart>
+      <div class="empty-cart-message">
+        <p>Your cart is empty. Explore our collection of enchanting treasures!</p>
+        <button mat-raised-button color="primary" routerLink="/catalog">Explore</button>
+      </div>
+    </ng-template>
+</div>
