--- a/estore-ui/src/app/nav/top-nav/top-nav.component.html
+++ b/estore-ui/src/app/nav/top-nav/top-nav.component.html
@@ -1,28 +1,38 @@
 <mat-toolbar class="header" color="primary">
     <div class="left-section">
-        <a mat-icon-button class="mobile-hamburger-menu" (click)="onToggleSidenav()">
+        <a class="mobile-hamburger-menu" mat-icon-button color="accent" (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
         </a>
-        <a [routerLink]="['/']" mat-icon-button aria-label="Logo button with a home icon">
-            <mat-icon>home</mat-icon>
-        </a>
-        <button [routerLink]="['/catalog']" mat-raised-button color="accent">Catalog</button>
+        <button mat-icon-button [routerLink]="['/']" mat-icon-button color="accent" aria-label="Logo button with a home icon">
+            <span class="logo-emoji">🌟</span>
+        </button>
     </div>
     <div class="middle-section">
         <app-product-search class="search-bar" />
       </div>
     <div class="right-section">
+        <button [routerLink]="['/catalog']" mat-icon-button color="accent">
+            <mat-icon>storefront</mat-icon>
+        </button>
         <ng-container *ngIf="(authService.getIsLoggedIn() | async)">
             <ng-container *ngIf="(authService.getIsAdmin() | async)">
-                <button routerLink="/admin" mat-raised-button color="accent">Dashboard</button>
+                <button routerLink="/admin" mat-icon-button color="accent">
+                    <mat-icon>admin_panel_settings</mat-icon>
+                </button>
             </ng-container>
             <ng-container *ngIf="!(authService.getIsAdmin() | async)">
-                <button routerLink="/cart" mat-raised-button color="accent">Cart</button>
+                <button routerLink="/cart" mat-icon-button color="accent">
+                    <mat-icon>shopping_cart</mat-icon>
+                </button>
             </ng-container>
-            <button (click)="onLogout()" mat-raised-button color="accent">Logout</button>
+            <button (click)="onLogout()" mat-icon-button color="accent">
+                <mat-icon>logout</mat-icon>
+            </button>
         </ng-container>
         <ng-container *ngIf="!(authService.getIsLoggedIn() | async)">
-            <button routerLink="/auth" mat-raised-button color="accent">Login</button>
+            <button routerLink="/auth" mat-icon-button color="accent">
+                <mat-icon>login</mat-icon>
+            </button>
         </ng-container>
     </div>
 </mat-toolbar>
