--- a/estore-ui/src/app/feature/admin-product-card/admin-product-card.component.html
+++ b/estore-ui/src/app/feature/admin-product-card/admin-product-card.component.html
@@ -1,1 +1,11 @@
-<p>admin-product-card works!</p>
+<mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>{{name}}</mat-card-title>
+      <mat-card-subtitle>{{price}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image />
+    <mat-card-content>{{description}}</mat-card-content>
+    <mat-card-actions align="end">
+       
+    </mat-card-actions>
+  </mat-card>
