--- a/estore-ui/src/app/feature/admin-dashboard/admin-dashboard.component.css
+++ b/estore-ui/src/app/feature/admin-dashboard/admin-dashboard.component.css
@@ -6,7 +6,7 @@ mat-grid-list {
     height: 250px;
     border-radius: 16px;
   }
-  admin-product-card{
+  admin-catalog-product-card{
     width: 100%;
     height: 250px;
     border-radius: 16px;
