--- a/estore-ui/src/app/feature/admin-product-card/admin-product-card.component.html
+++ b/estore-ui/src/app/feature/admin-product-card/admin-product-card.component.html
@@ -6,12 +6,12 @@
     <img mat-card-image />
     <mat-card-content>{{description}}</mat-card-content>
     <mat-card-actions align="end">
-        <button mat-button class="edit-button">
+        <button [routerLink]="['/edit-product/', sku]" mat-button class="edit-button">
         <mat-icon class="icon">edit</mat-icon>
         </button>
         <mat-menu #aboveMenu="matMenu" xPosition="before">
         </mat-menu>
-        <button mat-icon-button color="warn" class="close-button" aria-label="Close">
+        <button mat-icon-button color="warn" class="remove-button" aria-label="Remove" (click)="onDeleteProduct()">
         <mat-icon class="icon">delete_outline</mat-icon>
         </button>
         <mat-menu #afterMenu="matMenu" xPosition="after">
