--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
@@ -6,12 +6,14 @@
   <img mat-card-image />
   <mat-card-content>{{ description }}</mat-card-content>
   <mat-card-actions align="end">
-    <button
-      mat-button
-      style="background-color: #673ab7; color: white"
-      (click)="addToCart(sku)"
-    >
-      Add To Cart
-    </button>
+    <ng-container *ngIf="!(authService.getIsAdmin() | async)">
+      <button
+        mat-button
+        style="background-color: #673ab7; color: white"
+        (click)="addToCart(sku)"
+      >
+        Add To Cart
+      </button>
+    </ng-container>
   </mat-card-actions>
 </mat-card>
