--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.css
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.css
@@ -1,4 +1,19 @@
-.card {
-  max-width: 400px;
-  margin: 2%;
+:host {
+  min-width: 250px;
+}
+
+.content {
+  min-height: 350px;
+}
+
+.product-image {
+  border-radius: 4px;
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: space-between;
 }
