--- a/estore-ui/src/app/feature/test-catalog/test-catalog.component.css
+++ b/estore-ui/src/app/feature/test-catalog/test-catalog.component.css
@@ -1,21 +1,48 @@
-mat-grid-list {
-  padding: 20px;
-}
-mat-grid-tile {
-    width: 100%;
-  height: 250px;
-  border-radius: 16px;
-}
-app-catalog-product-card{
-  width: 100%;
-  height: 250px;
-  border-radius: 16px;
-  max-width: 800px;
-}
+
 h1{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 40px;
-    padding: 10px 10px;
-    text-align: center;
-    color: #673ab7;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 40px;
+  padding: 10px 10px;
+  text-align: center;
+  color: #673ab7;
+}
+
+.product-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px; /* You can adjust this value to set the gap between cards */
+}
+
+app-catalog-product-card {
+  flex: 1 1 calc(16.6666% - 16px); /* 25% for 4 items per row, adjust the 16px to match the gap value */
+  max-width: calc(16.6666% - 16px); /* Adjust the 16px to match the gap value */
+}
+
+@media (max-width: 1200px) {
+  app-catalog-product-card {
+    flex: 1 1 calc(20% - 16px);
+    max-width: calc(20% - 16px);
+  }
+}
+
+@media (max-width: 900px) {
+  app-catalog-product-card {
+    flex: 1 1 calc(33.3333% - 16px);
+    max-width: calc(33.3333% - 16px);
+  }
+}
+
+@media (max-width: 600px) {
+  app-catalog-product-card {
+    flex: 1 1 calc(50% - 16px);
+    max-width: calc(50% - 16px);
+  }
+}
+
+@media (max-width: 400px) {
+  app-catalog-product-card {
+    flex: 1 1 calc(100% - 16px);
+    max-width: calc(100% - 16px);
+  }
 }
