--- a/estore-ui/src/app/feature/test-catalog/test-catalog.component.html
+++ b/estore-ui/src/app/feature/test-catalog/test-catalog.component.html
@@ -8,7 +8,8 @@
             [name]="product.name"
             [price]="product.price"
             [description]="product.description.summary"
-            [sku]="product.sku">
+            [sku]="product.sku"
+            [stock]="product.stockQuantity">
         </app-catalog-product-card>
         </mat-grid-tile>
     </mat-grid-list>
