--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
@@ -1,6 +1,10 @@
-<mat-card class="card">
-  <mat-card-header>
-    <mat-card-title>{{ name }}</mat-card-title>
+<mat-card class="card" [routerLink]="['/catalog/', sku]">
+  <mat-card-content class="content">
+    <img *ngIf="image"
+      [src]="image"
+      [alt]="['Image of ', name]"
+      class="product-image"
+    />
     <mat-chip class="stock-label">
       <mat-icon class="status-icon" [ngClass]="{
         'green': stockStatus==='In Stock',
@@ -9,14 +13,17 @@
         ></mat-icon>
       {{stockStatus}}
     </mat-chip>
-    <mat-card-subtitle>{{ price }}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image />
-  <mat-card-content>{{ description }}</mat-card-content>
-  <mat-card-actions align="end" class="footer">
-    <button mat-raised-button color="primary"
-    (click)="addToCart(sku)" [disabled]="stockStatus==='Out Of Stock'">
-      Add To Cart
-    </button>
-  </mat-card-actions>
+    <mat-card-title class="product-name">{{ name }}</mat-card-title>
+    <div class="stars-container">
+      <ng-container *ngFor="let i of [1, 2, 3, 4, 5]">
+        <mat-icon class="star-icon" color="accent">star</mat-icon>
+      </ng-container>
+      <span class="reviews">10</span>
+    </div>
+    <div style="font-size: 1.2rem;">$<span style="display: inline; padding-left: 2px;" class="price">{{ price }}</span></div>
+    
+    <mat-card-actions>
+      <button mat-raised-button color="primary" (click)="addToCart(sku); $event.stopPropagation()" [disabled]="stockStatus==='Out Of Stock'">Add to Cart</button>
+    </mat-card-actions>
+  </mat-card-content>
 </mat-card>
