--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.scss
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.scss
@@ -1,19 +1,35 @@
 .card {
   max-width: 400px;
-  margin: 2%;
+  margin: 1%;
 }
 
 .stock-label {
   position: absolute;
-  right: 15px;
-
+  right: 20px;
+  top: 3px; /* adjust as needed */
+  font-size: 0.6em; /* adjust as needed */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 10px;
+  width: 65px;
+  right: 30x;
+  padding-left: 4px;
+  // padding-top: 5px;
+  // padding-bottom: 4px;
+  bottom: 2px;
 }
 
 .status-icon{ 
-  width: 10px;
-  height: 10px;
+  width: 4px;
+  height: 4px;
   border-radius: 50%;
-  border: 1px solid #000000; 
+  border: 1px solid #000000;
+  position: absolute;
+  top: 50%;
+  left: 9px;
+  transform: translate(-50%, -50%); /* use translate to center the icon */
+
 }
 
 /**
@@ -55,3 +71,79 @@ Creates a radial gradient background with vendor prefixes for various browsers.
   @include radial-gradient($start-red, $mid-red, $end-red)
 }
 
+:host {
+  min-width: 250px;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card:hover .product-image {
+  transform: scale(1.05);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 365px;
+}
+
+.product-image {
+  border-radius: 10px;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+  transition: all 0.15s ease-in-out;
+}
+
+.product-name {
+  margin-top: .2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.4; /* Set line-height for the product name */
+  height: 2.8em; /* Set the height to be 2 lines high */
+  overflow: hidden; /* Hide any text that goes beyond the specified height */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.stars-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+}
+
+.stars-container .star-icon {
+  font-size: 1rem;
+  margin-right: -0.5rem;
+}
+
+.reviews {
+  font-size: 0.875rem;
+  margin-left: 0.25rem;
+  padding-bottom: 4px;
+}
+
+.price {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+}
+
+mat-card-actions button {
+  font-size: 1rem;
+}
