--- a/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
+++ b/estore-ui/src/app/feature/catalog-product-card/catalog-product-card.component.html
@@ -5,14 +5,14 @@
       [alt]="['Image of ', name]"
       class="product-image"
     />
-    <mat-chip class="stock-label">
+    <label class="stock-label">
       <mat-icon class="status-icon" [ngClass]="{
         'green': stockStatus==='In Stock',
         'orange': stockStatus==='Low Stock', 
         'red': stockStatus==='Out Of Stock'}"
         ></mat-icon>
       {{stockStatus}}
-    </mat-chip>
+    </label>
     <mat-card-title class="product-name">{{ name }}</mat-card-title>
     <div class="stars-container">
       <ng-container *ngFor="let i of [1, 2, 3, 4, 5]">
