--- a/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.html
+++ b/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<!-- <mat-card class="card">
     <mat-card-header>
       <mat-card-title>{{name}}</mat-card-title>
       <mat-card-subtitle>{{price}}</mat-card-subtitle>
@@ -17,4 +17,40 @@
         <mat-menu #afterMenu="matMenu" xPosition="after">
         </mat-menu>
     </mat-card-actions>
-  </mat-card>
+  </mat-card> -->
+
+<mat-card class="card">
+  <mat-card-content class="content">
+    <img *ngIf="image"
+      [src]="image"
+      [alt]="['Image of ', name]"
+      class="product-image"
+    />
+    <label class="stock-label">
+      <mat-icon class="status-icon" [ngClass]="{
+        'green': stockStatus==='In Stock',
+        'orange': stockStatus==='Low Stock', 
+        'red': stockStatus==='Out Of Stock'}"
+        ></mat-icon>
+      {{stockStatus}}
+    </label>
+    <mat-card-title class="product-name">{{ name }}</mat-card-title>
+    <div class="stars-container">
+      <ng-container *ngFor="let i of [1, 2, 3, 4, 5]">
+        <mat-icon class="star-icon" color="accent">star</mat-icon>
+      </ng-container>
+      <span class="reviews">10</span>
+    </div>
+    <div style="font-size: 1.2rem;">$<span style="display: inline; padding-left: 2px;" class="price">{{ price }}</span></div>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button [routerLink]="['/edit-product/', sku]" mat-button class="edit-button">
+      <mat-icon class="icon">edit</mat-icon>
+    </button>
+    <mat-menu #aboveMenu="matMenu" xPosition="before"></mat-menu>
+    <button mat-icon-button color="warn" class="remove-button" aria-label="Remove" (click)="onDeleteProduct()">
+      <mat-icon class="icon">delete_outline</mat-icon>
+    </button>
+    <mat-menu #afterMenu="matMenu" xPosition="after"></mat-menu>
+  </mat-card-actions>
+</mat-card>
