--- a/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.html
+++ b/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.html
@@ -1,24 +1,3 @@
-<!-- <mat-card class="card">
-    <mat-card-header>
-      <mat-card-title>{{name}}</mat-card-title>
-      <mat-card-subtitle>{{price}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image />
-    <mat-card-content>{{description}}</mat-card-content>
-    <mat-card-actions align="end">
-        <button [routerLink]="['/edit-product/', sku]" mat-button class="edit-button">
-        <mat-icon class="icon">edit</mat-icon>
-        </button>
-        <mat-menu #aboveMenu="matMenu" xPosition="before">
-        </mat-menu>
-        <button mat-icon-button color="warn" class="remove-button" aria-label="Remove" (click)="onDeleteProduct()">
-        <mat-icon class="icon">delete_outline</mat-icon>
-        </button>
-        <mat-menu #afterMenu="matMenu" xPosition="after">
-        </mat-menu>
-    </mat-card-actions>
-  </mat-card> -->
-
 <mat-card class="card">
   <mat-card-content class="content">
     <img *ngIf="image"
@@ -42,15 +21,14 @@
       <span class="reviews">10</span>
     </div>
     <div style="font-size: 1.2rem;">$<span style="display: inline; padding-left: 2px;" class="price">{{ price }}</span></div>
+    
+    <mat-card-actions>
+      <button mat-icon-button [routerLink]="['/edit-product/', sku]" class="edit-button">
+        <mat-icon class="icon">edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" class="remove-button" aria-label="Remove" (click)="onDeleteProduct()">
+        <mat-icon class="icon">delete_outline</mat-icon>
+      </button>
+    </mat-card-actions>
   </mat-card-content>
-  <mat-card-actions align="end">
-    <button [routerLink]="['/edit-product/', sku]" mat-button class="edit-button">
-      <mat-icon class="icon">edit</mat-icon>
-    </button>
-    <mat-menu #aboveMenu="matMenu" xPosition="before"></mat-menu>
-    <button mat-icon-button color="warn" class="remove-button" aria-label="Remove" (click)="onDeleteProduct()">
-      <mat-icon class="icon">delete_outline</mat-icon>
-    </button>
-    <mat-menu #afterMenu="matMenu" xPosition="after"></mat-menu>
-  </mat-card-actions>
 </mat-card>
