--- a/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.scss
+++ b/estore-ui/src/app/features/admin/admin-product-card/admin-product-card.component.scss
@@ -75,7 +75,7 @@ Creates a radial gradient background with vendor prefixes for various browsers.
 }
 
 .product-image {
-  border-radius: 10px;
+  border-radius: 8px;
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -122,8 +122,9 @@ Creates a radial gradient background with vendor prefixes for various browsers.
 }
 
 mat-card-actions {
+  padding-top: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-top: auto;
 }
