--- a/estore-ui/src/app/features/order-processing/cart/cart.component.scss
+++ b/estore-ui/src/app/features/order-processing/cart/cart.component.scss
@@ -50,5 +50,46 @@ app-cart-product-card {
     button {
       font-weight: bold;
     }
+}
+
+.cart-summary {
+  flex: 1 1 300px;
+  background-color: #f5f5f5; // slightly lighter grey
+  border-radius: 16px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  h2 {
+    font-weight: bold;
+    margin-bottom: 20px;
   }
+
+  .summary-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+  .total {
+    font-weight: bold;
+  }
+
+  button {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .cart-summary {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .cart-summary {
+    max-width: 100%;
+  }
+}
   
