--- a/estore-ui/src/app/features/order-processing/cart/cart.component.html
+++ b/estore-ui/src/app/features/order-processing/cart/cart.component.html
@@ -28,7 +28,7 @@
           <span>Total</span>
           <span>{{ totalPrice | currency }}</span>
         </div>
-        <button mat-raised-button color="primary">Proceed to Checkout</button>
+        <button mat-raised-button color="primary" routerLink="/checkout">Proceed to Checkout</button>
       </div>
     </ng-container>
     <ng-template #emptyCart>
