--- a/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
+++ b/estore-ui/src/app/features/browse-catalog/product-details/product-details.component.html
@@ -3,10 +3,10 @@
 
   <div class="product-image">
     <img src={{image}} alt="Product Image">
-  </div>
-  <div class="product-details">
+  </div> 
+  <div class="product-details"> 
 
-    <h1 class="product-title">{{name}} <span class="product-sku">SKU: {{sku}}</span></h1>
+    <h1 class="product-title">Name goes here <span class="product-sku">SKU: {{sku}}</span></h1>
 
     <label class="stock-label">
       <mat-icon class="status-icon" [ngClass]="{
